## process this file with automake to produce Makefile.in
## $Id$

#templatedir = $(DATA_ROOT)/CppRemoteTemplates
templatedir = $(TEMPLATE_ROOT)/CppRemoteTemplates
dist_template_DATA = \
    Blank                 \
    MakefilePy            \
    MakefileRemote        \
    CCMContainerHeader    \
    CCMContainerImpl      \
    ComponentsIdl         \
    ConvertRemoteHeader   \
    MContainer            \
    MHomeDef              \
    MFactoryDefHeader     \
    MFactoryDefImpl       \
    MComponentDef         \
    MSupportsDefInclude   \
    MProvidesDefInclude   \
    MUsesDefInclude       \
    MConsumesDefInclude   \
    MEmitsDefInclude      \
    MPublishesDefInclude  \
    MAttributeDefEqInterfaceHeader   \
    MProvidesDefFriend    \
    MProvidesDefAdapterVariable \
    MUsesDefAdapterVariable \
    MSupportsDefEqInterfaceHeader\
    MOperationSupportsHeader \
    MExceptionDef   \
    MProvidesDefEqInterfaceHeader \
    MProvidesDefAdapterHeader \
    MOperationProvidesPrototype \
    MOperationUsesPrototype \
    MUsesDefEqInterfaceHeader \
    MUsesDefAdapterHeader  \
    MUsesDefGetAdapterHeader \
    MUsesDefGetLocalAdapterHeader\
    MUsesDefLocalAdapterHeader \
    MAttributeDefEqInterfaceImpl \
    MSupportsDefEqInterfaceImpl \
    MOperationSupportsImpl \
    MProvidesDefEqInterfaceImpl \
    MUsesDefEqInterfaceImpl \
    MProvidesDefAdapterVariableInit \
    MProvidesDefNavigationFacet     \
    MUsesDefReceptacleConnect       \
    MUsesDefReceptacleDisconnect    \
    MUsesDefContextInit             \
    MUsesDefContextGetConnection    \
    MProvidesDefAdapterImpl         \
    MOperationFacetAdapterImpl      \
    MUsesDefAdapterImpl             \
    MOperationReceptacleAdapterImpl \
    MAttributeDefAdapterHeader      \
    MAttributeDefFacetAdapterImpl   \
    MStructDef                      \
    MFieldDef                       \
    MFieldDefInclude






