## process this file with automake to produce Makefile.in

templatedir = $(TEMPLATE_ROOT)/IDL2Templates
dist_template_DATA = \
    MakefilePy                               \
    MakefileIdl                              \
    MAliasDef                                \
    MArrayDef                                \
    MAttributeDef                            \
    MAttributeDefReadonly                    \
    MComponentDef                            \
    MComponentDefAbstract                    \
    MComponentDefAbstractLocal               \
    MComponentDefLocal                       \
    MConstantDef                             \
    MConsumesDef                             \
    MEmitsDef                                \
    MEnumDef                                 \
    MExceptionDef                            \
    MExceptionDefName                        \
    MFactoryDef                              \
    MFieldDef                                \
    MFinderDef                               \
    MHomeDef                                 \
    MHomeDefAbstract                         \
    MHomeDefAbstractLocal                    \
    MHomeDefLocal                            \
    MHomeDefPrimaryKeyFunctions              \
    MHomeDefPrimaryKeyFunctionsAbstract      \
    MHomeDefPrimaryKeyFunctionsAbstractLocal \
    MHomeDefPrimaryKeyFunctionsLocal         \
    MInterfaceDef                            \
    MInterfaceDefAbstract                    \
    MInterfaceDefAbstractLocal               \
    MInterfaceDefLocal                       \
    MOperationDef                            \
    MParameterDef                            \
    MProvidesDef                             \
    MPublishesDef                            \
    MStructDef                               \
    MStructDefFwdDecl                        \
    MUnionDef                                \
    MUnionDefFwdDecl                         \
    MUnionFieldDef                           \
    MUsesDef                                 \
    MUsesDefMultiple                         \
    MSupportsDefBase
