## process this file with automake to produce Makefile.in

templatedir = $(TEMPLATE_ROOT)/IDL2Templates
dist_template_DATA = \
    MakefilePy                               \
    MakefileIdl                              \
    MAliasDef                                \
    MArrayDef                                \
    MAttributeDef                            \
    MAttributeDefInclude                     \
    MAttributeDefIncludeReadonly             \
    MAttributeDefReadonly                    \
    MComponentDef                            \
    MComponentDefAbstract                    \
    MComponentDefAbstractLocal               \
    MComponentDefLocal                       \
    MConstantDef                             \
    MConstantDefInclude                      \
    MConsumesDef                             \
    MConsumesDefInclude                      \
    MEmitsDef                                \
    MEmitsDefInclude                         \
    MEnumDef                                 \
    MExceptionDef                            \
    MExceptionDefName                        \
    MExceptionDefInclude                     \
    MFactoryDef                              \
    MFactoryDefInclude                       \
    MFieldDef                                \
    MFieldDefInclude                         \
    MFinderDef                               \
    MFinderDefInclude                        \
    MHomeDef                                 \
    MHomeDefAbstract                         \
    MHomeDefAbstractLocal                    \
    MHomeDefLocal                            \
    MHomeDefPrimaryKeyFunctions              \
    MHomeDefPrimaryKeyFunctionsAbstract      \
    MHomeDefPrimaryKeyFunctionsAbstractLocal \
    MHomeDefPrimaryKeyFunctionsLocal         \
    MInterfaceDef                            \
    MInterfaceDefAbstract                    \
    MInterfaceDefAbstractLocal               \
    MInterfaceDefLocal                       \
    MOperationDef                            \
    MOperationDefInclude                     \
    MParameterDef                            \
    MParameterDefInclude                     \
    MProvidesDef                             \
    MProvidesDefInclude                      \
    MPublishesDef                            \
    MPublishesDefInclude                     \
    MStructDef                               \
    MUnionDef                                \
    MUnionFieldDefInclude                    \
    MUsesDef                                 \
    MUsesDefInclude                          \
    MUsesDefIncludeMultiple                  \
    MUsesDefMultiple                         \
    MSupportsDef                             \
    MSupportsDefInclude
