## process this file with automake to produce Makefile.in
## $Id$

templatedir = $(TEMPLATE_ROOT)/IDL3MirrorTemplates
dist_template_DATA = \
    MAliasDef                  \
    MArrayDef                  \
    MAttributeDef              \
    MAttributeDefReadonly      \
    MComponentDef              \
    MComponentDefAbstract      \
    MComponentDefAbstractLocal \
    MComponentDefFwdDecl       \
    MComponentDefLocal         \
    MConstantDef               \
    MConsumesDef               \
    MContainer                 \
    MEmitsDef                  \
    MEnumDef                   \
    MEnumDefFwdDecl            \
    MExceptionDef              \
    MExceptionDefName          \
    MFactoryDef                \
    MFieldDef                  \
    MHomeDef                   \
    MHomeDefAbstract           \
    MHomeDefAbstractLocal      \
    MHomeDefLocal              \
    MInterfaceDef              \
    MInterfaceDefAbstract      \
    MInterfaceDefAbstractLocal \
    MInterfaceDefLocal         \
    MModuleDef                 \
    MOperationDef              \
    MParameterDef              \
    MProvidesDef               \
    MProvidesDefInclude        \
    MPublishesDef              \
    MStructDef                 \
    MStructDefFwdDecl          \
    MSupportsDef               \
    MSupportsDefInclude        \
    MUnionDef                  \
    MUnionDefFwdDecl           \
    MUnionFieldDef             \
    MUsesDef                   \
    MUsesDefInclude            \
    MUsesDefIncludeMultiple    \
    MUsesDefMultiple
