## process this file with automake to produce Makefile.in

templatedir = $(TEMPLATE_ROOT)/IDL3Templates
dist_template_DATA = \
    MAliasDef                  \
    MArrayDef                  \
    MAttributeDef              \
    MAttributeDefReadonly      \
    MComponentDef              \
    MComponentDefFwdDecl       \
    MComponentDefAbstract      \
    MComponentDefAbstractLocal \
    MComponentDefLocal         \
    MConstantDef               \
    MConsumesDef               \
    MConsumesDefInclude        \
    MEmitsDef                  \
    MEmitsDefInclude           \
    MEnumDef                   \
    MExceptionDef              \
    MExceptionDefName          \
    MFactoryDef                \
    MFieldDef                  \
    MFieldDefInclude           \
    MHomeDef                   \
    MHomeDefAbstract           \
    MHomeDefAbstractLocal      \
    MHomeDefLocal              \
    MInterfaceDef              \
    MInterfaceDefAbstract      \
    MInterfaceDefAbstractLocal \
    MInterfaceDefLocal         \
    MOperationDef              \
    MParameterDef              \
    MProvidesDef               \
    MPublishesDef              \
    MPublishesDefInclude       \
    MStructDef                 \
    MStructDefFwdDecl          \
    MSupportsDef               \
    MUnionDef                  \
    MUnionDefFwdDecl           \
    MUnionFieldDef             \
    MUnionFieldDefInclude      \
    MUsesDef                   \
    MUsesDefMultiple
