## process this file with automake to produce Makefile.in

templatedir = $(TEMPLATE_ROOT)/IDL3Templates
dist_template_DATA = \
    MAliasDef                  \
    MArrayDef                  \
    MAttributeDef              \
    MAttributeDefReadonly      \
    MComponentDef              \
    MComponentDefAbstract      \
    MComponentDefAbstractLocal \
    MComponentDefLocal         \
    MConstantDef               \
    MConsumesDef               \
    MConsumesDefInclude        \
    MEmitsDef                  \
    MEmitsDefInclude           \
    MEnumDef                   \
    MExceptionDef              \
    MExceptionDefName          \
    MFactoryDef                \
    MFieldDef                  \
    MFieldDefInclude           \
    MHomeDef                   \
    MHomeDefAbstract           \
    MHomeDefAbstractLocal      \
    MHomeDefLocal              \
    MInterfaceDef              \
    MInterfaceDefAbstract      \
    MInterfaceDefAbstractLocal \
    MInterfaceDefLocal         \
    MOperationDef              \
    MParameterDef              \
    MProvidesDef               \
    MProvidesDefInclude        \
    MPublishesDef              \
    MPublishesDefInclude       \
    MStructDef                 \
    MSupportsDef               \
    MSupportsDefInclude        \
    MUnionDef                  \
    MUnionFieldDef             \
    MUnionFieldDefInclude      \
    MUsesDef                   \
    MUsesDefInclude            \
    MUsesDefIncludeMultiple    \
    MUsesDefMultiple
