## process this file with automake to produce Makefile.in

templatedir = $(DATA_ROOT)/IDL3Templates
dist_template_DATA = \
    MAliasDef                    \
    MArrayDef                    \
    MAttributeDef                \
    MAttributeDefInclude         \
    MAttributeDefIncludeReadonly \
    MAttributeDefReadonly        \
    MComponentDef                \
    MComponentDefAbstract        \
    MComponentDefAbstractLocal   \
    MComponentDefLocal           \
    MConstantDef                 \
    MConstantDefInclude          \
    MConsumesDef                 \
    MConsumesDefInclude          \
    MEmitsDef                    \
    MEmitsDefInclude             \
    MEnumDef                     \
    MExceptionDef                \
    MExceptionDefName            \
    MExceptionDefInclude         \
    MFactoryDef                  \
    MFactoryDefInclude           \
    MFieldDef                    \
    MFieldDefInclude             \
    MFinderDef                   \
    MFinderDefInclude            \
    MHomeDef                     \
    MHomeDefAbstract             \
    MHomeDefAbstractLocal        \
    MHomeDefLocal                \
    MInterfaceDef                \
    MInterfaceDefAbstract        \
    MInterfaceDefAbstractLocal   \
    MInterfaceDefLocal           \
    MOperationDef                \
    MOperationDefInclude         \
    MParameterDef                \
    MParameterDefInclude         \
    MProvidesDef                 \
    MProvidesDefInclude          \
    MPublishesDef                \
    MPublishesDefInclude         \
    MStructDef                   \
    MSupportsDef                 \
    MSupportsDefInclude          \
    MUnionDef                    \
    MUnionFieldDef               \
    MUnionFieldDefInclude        \
    MUsesDef                     \
    MUsesDefInclude              \
    MUsesDefIncludeMultiple      \
    MUsesDefMultiple
