## process this file with automake to produce Makefile.in
## $Id$

CLASSPATH_ENV = CLASSPATH=
AM_JAVACFLAGS = -g

dist_noinst_JAVA = \
    BaseIdl.java             \
    MAliasDefImpl.java       \
    MAliasDef.java           \
    MArrayDefImpl.java       \
    MArrayDef.java           \
    MAttributeDefImpl.java   \
    MAttributeDef.java       \
    MConstantDefImpl.java    \
    MConstantDef.java        \
    MContainedImpl.java      \
    MContained.java          \
    MContainerImpl.java      \
    MContainer.java          \
    MDefinitionKind.java     \
    MEnumDefImpl.java        \
    MEnumDef.java            \
    MExceptionDefImpl.java   \
    MExceptionDef.java       \
    MFieldDefImpl.java       \
    MFieldDef.java           \
    MFixedDefImpl.java       \
    MFixedDef.java           \
    MIDLTypeImpl.java        \
    MIDLType.java            \
    MInterfaceDefImpl.java   \
    MInterfaceDef.java       \
    MLong.java               \
    MModuleDefImpl.java      \
    MModuleDef.java          \
    MOperationDefImpl.java   \
    MOperationDef.java       \
    MParameterDefImpl.java   \
    MParameterDef.java       \
    MParameterMode.java      \
    MPrimitiveDefImpl.java   \
    MPrimitiveDef.java       \
    MPrimitiveKind.java      \
    MSequenceDefImpl.java    \
    MSequenceDef.java        \
    MStringDefImpl.java      \
    MStringDef.java          \
    MStructDefImpl.java      \
    MStructDef.java          \
    MTypedefDefImpl.java     \
    MTypedefDef.java         \
    MTypedImpl.java          \
    MTyped.java              \
    MUnionDefImpl.java       \
    MUnionDef.java           \
    MUnionFieldDefImpl.java  \
    MUnionFieldDef.java      \
    MValueBoxDefImpl.java    \
    MValueBoxDef.java        \
    MValueDefImpl.java       \
    MValueDef.java           \
    MValueMemberDefImpl.java \
    MValueMemberDef.java     \
    MWstringDefImpl.java     \
    MWstringDef.java
