## process this file with automake to produce Makefile.in
## $Id$

CLASSPATH_ENV = CLASSPATH=$(top_builddir)
AM_JAVACFLAGS = -g

dist_noinst_JAVA = \
    MComponentDefImpl.java \
    MComponentDef.java     \
    MConsumesDefImpl.java  \
    MConsumesDef.java      \
    MEmitsDefImpl.java     \
    MEmitsDef.java         \
    MEventDefImpl.java     \
    MEventDef.java         \
    MEventPortDefImpl.java \
    MEventPortDef.java     \
    MFactoryDefImpl.java   \
    MFactoryDef.java       \
    MFinderDefImpl.java    \
    MFinderDef.java        \
    MHomeDefImpl.java      \
    MHomeDef.java          \
    MProvidesDefImpl.java  \
    MProvidesDef.java      \
    MPublishesDefImpl.java \
    MPublishesDef.java     \
    MSupportsDefImpl.java  \
    MSupportsDef.java      \
    MUsesDefImpl.java      \
    MUsesDef.java
