## process this file with automake to produce Makefile.in
## $Id$


CLASSPATH_ENV = CLASSPATH=$(CLASSPATH):$(top_builddir)

AM_JAVACFLAGS = -g

dist_noinst_JAVA = OclChecker.java           \
                   OclMdrAdapter.java        \
                   OclModelCreator.java      \
                   OclXmlWriter.java         \
                   OclElementCreator.java  \
                   OclNormalization.java     \
                   OclTextWriter.java        \
                   Main.java OclCreatorImp.java Factory.java


