## process this file with automake to produce Makefile.in

templatedir = $(DATA_ROOT)/CppLocalTemplates
dist_template_DATA = \
    Blank                                          \
    CerrDebugWriterHeader                          \
    CerrDebugWriterImpl                            \
    Confix                                         \
    DebugHeader                                    \
    DebugImpl                                      \
    DebugWriterHeader                              \
    DebugWriterManagerHeader                       \
    DebugWriterManagerImpl                         \
    HomeFinderHeader                               \
    HomeFinderImpl                                 \
    LinkAssertHeader                               \
    LocalComponentsHeader                          \
    LocalTransactionHeader                         \
    MAliasDef                                      \
    MAttributeDefAdapterDefinition                 \
    MAttributeDefImplDefinition                    \
    MAttributeDefPrototype                         \
    MAttributeDefPrototypeVV                       \
    MAttributeDefVariable                          \
    MComponentDef                                  \
    MConsumesDefInclude                            \
    MEmitsDefInclude                               \
    MEnumDef                                       \
    MExceptionDef                                  \
    MExceptionDefThrows                            \
    MFactoryDefAdapterDefinition                   \
    MFactoryDefAdapterPrototypeV                   \
    MFactoryDefAdapterPrototypeVV                  \
    MFactoryDefImplDefinition                      \
    MFactoryDefPrototypeV                          \
    MFactoryDefPrototypeVV                         \
    MFieldDefInit                                  \
    MFieldDefName                                  \
    MHomeDef                                       \
    MInterfaceDef                                  \
    MModuleDef                                     \
    MOperationDefPrototypeVV                       \
    MOperationProvidesAdapterDefinition            \
    MOperationProvidesAdapterImplDefinition        \
    MOperationProvidesPrototype                    \
    MOperationSupportsAdapterDefinition            \
    MOperationSupportsImplDefinition               \
    MOperationSupportsPrototype                    \
    MOperationSupportsPrototypeVV                  \
    MParameterDefAll                               \
    MParameterDefName                              \
    MProvidesDefAdapterClass                       \
    MProvidesDefAdapterClassImpl                   \
    MProvidesDefAdapterDefinition                  \
    MProvidesDefAdapterImplClass                   \
    MProvidesDefAdapterImplClassImpl               \
    MProvidesDefAdapterVariable                    \
    MProvidesDefAdapterVariableInit                \
    MProvidesDefGetFacetDefinition                 \
    MProvidesDefGetFacetPrototype                  \
    MProvidesDefGetFacetPrototypeVV                \
    MProvidesDefImplRemove                         \
    MProvidesDefInclude                            \
    MProvidesDefProvideFacet                       \
    MProvidesDefProvidePrototype                   \
    MPublishesDefInclude                           \
    MStructDef                                     \
    MSupportsDefAdapterImplDefinition              \
    MSupportsDefAdapterPrototype                   \
    MSupportsDefBase                               \
    MSupportsDefImplDefinition                     \
    MSupportsDefImplPrototype                      \
    MSupportsDefImplPrototypeVV                    \
    MSupportsDefInclude                            \
    MUnionDef                                      \
    MUnionFieldDef                                 \
    MUsesDefAdapterDefinition                      \
    MUsesDefAdapterDefinitionMultiple              \
    MUsesDefAdapterVariable                        \
    MUsesDefAdapterVariableInit                    \
    MUsesDefAdapterVariableInitMultiple            \
    MUsesDefAdapterVariableMultiple                \
    MUsesDefConnectFacet                           \
    MUsesDefConnectFacetMultiple                   \
    MUsesDefConnectPrototype                       \
    MUsesDefConnectPrototypeMultiple               \
    MUsesDefDisconnectFacet                        \
    MUsesDefDisconnectFacetMultiple                \
    MUsesDefGetConnectionCtxImplDefinition         \
    MUsesDefGetConnectionCtxImplDefinitionMultiple \
    MUsesDefGetConnectionPrototype                 \
    MUsesDefGetConnectionPrototypeMultiple         \
    MUsesDefGetConnectionPrototypeVV               \
    MUsesDefGetConnectionPrototypeVVMultiple       \
    MUsesDefInclude                                \
    MUsesDefIncludeMultiple                        \
    SmartPointerHeader                             \
    SmartPointerImpl

