## process this file with automake to produce Makefile.in
## $Id$

dist_noinst_DATA = ccmtools-generate        \
                   ccmtools-c++-environment \
                   ccmtools-c++-generate    \
                   ccmtools-c++-configure   \
                   ccmtools-c++-make        \
                   ccmtools-c++-install     \
                   ccmtools-c++-uninstall

bin_SCRIPTS = $(dist_noinst_DATA)

