## process this file with automake to produce Makefile.in

dist_noinst_DATA = \
  ccmtools-generate              \
  ccmtools-c++-environment       \
  ccmtools-c++remote-environment \
  ccmtools-c++remote-generate    \
  ccmtools-c++-generate          \
  ccmtools-c++-configure         \
  ccmtools-c++-make              \
  ccmtools-c++-install           \
  ccmtools-c++-uninstall         \
  ccmtools-idl

bin_SCRIPTS = $(dist_noinst_DATA)

