## process this file with automake to produce Makefile.in

dist_noinst_DATA = \
  ccmtools-generate              \
  ccmtools-c++remote-generate    \
  ccmtools-c++-generate          \
  ccmtools-c++-configure         \
  ccmtools-c++-make              \
  ccmtools-c++-install           \
  ccmtools-c++-uninstall         \
  ccmtools-idl                   \
  uml2idl

bin_SCRIPTS = $(dist_noinst_DATA)

